added: create and task endpoints

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -11,6 +11,9 @@ gem "sqlite3", "~> 1.4"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 
+# gem irb now depends on psych, but version 5 will not bundle currently  
+gem("psych", "~> 4")  
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 
