--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "expo": "^51.0.8",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
